@@ -94,8 +94,6 @@ Mifare card manipulation library (libfreefare, \-lfreefare)
 .Fn mifare_desfire_connect "MifareTag tag"
 .Ft int
 .Fn mifare_desfire_disconnect "MifareTag tag"
-.\".Ft uint8_t
-.\".Fn mifare_desfire_get_last_error "MifareTag tag"
 .Ft int
 .Fn mifare_desfire_authenticate "MifareTag tag" "uint8_t key_no" "MifareDESFireKey key"
 .Ft int
